--- a/style.css
+++ b/style.css
@@ -1,337 +1,332 @@
-html{
-  scroll-behavior: smooth;
-}
-
-
-body{
-  font-family: 'Lato', sans-serif;
-  padding: 0;
-  margin: 0;
-}
-nav{
-  background-color: black;
-  color: white;
-  padding: 10px 40px;
-}
-
-.navTop{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.search{
-  display: flex;
-  align-items: center;
-  background-color: grey;
-  padding: 10px 20px ;
-  border-radius: 10px;
-}
-.searchInput{
-  border: none;
-  background-color: transparent;
-}
-.searchInput::placeholder{
-  color: lightgrey;
-}
-.Limittedoffer{
-  font-size: 20px;
-  border-bottom: 2px solid green;
-  cursor: pointer;
-}
-.navBottom{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.menuitem{
-  margin-right: 40px;
-  cursor: pointer;
-  color: lightgrey;
-  font-weight: 400;
-}
-
-.slider{
-  background: url("./img/🥑.jpeg" );
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
-  overflow: hidden;
-}
-.slideWrapper{
-  display:flex;
-  width: 500vw;
-  transition: all 1s ease-in-out;
-}
-.sliderItem{
- width: 200vw; 
- display: flex;
- align-items: center;
- justify-content: center;
- position: relative;
- 
-}
-.sliderBg{
-  width: 750px;
-  height:750px;
-  border-radius: 50%;
-  position: absolute;
-  background-color: rgb(90, 121, 5);
-  left: auto;
-}
-
-.sliderimg{
-  z-index:1 ;
-}
-.sliderTitle{
-  position:relative;
-  top: 40px;
-  right: 30px;
-  font-size: 40px;
-  font-weight: 900;
-  color: rgb(255, 253, 253);
-  z-index: 1;
-}
-.sliderPrice{
-  position: absolute;
-  top: 10px; ;
-  left: 90px;
-  font-size: 5vw;
-  font-weight: 300;
-  background-color: rgb(49, 47, 45);
-  text-align: center;
-  color: black;
-  border: 1px solid rgba(152, 165, 104, 
-  0.384);
-  border-radius:1cm;
-}
-.buybutton{
-  position: absolute;
-  bottom: 80px;
-  left: 69%;
-  font-size: 1.5vw;
-  font-weight: 300;
-  text-align: center;
-  color: rgb(182, 182, 190);
-  border: 1px solid grey;
-  background-color: black;
-}
-.buybutton:hover{
-  background-color: rgb(255, 255, 255);
-  color: rgb(17, 7, 7);
-}
-.sliderItem:nth-child(1) .sliderBg {
-  background-color: #369e62;
-}
-.sliderItem:nth-child(2) .sliderBg {
-  background-color: rebeccapurple;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>zabii 4777</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet" />
   
-}
-.sliderItem:nth-child(3) .sliderBg {
-  background-color: teal;
-}
-.sliderItem:nth-child(4) .sliderBg {
-  background-color: cornflowerblue;
-  background-image: image();
-}
-.sliderItem:nth-child(5) .sliderBg {
-  background-color: rgb(124, 115, 80);
-}
-
-.sliderItem:nth-child(1) .sliderPrice {
-  color: #97ddb4;
-}
-.features{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 30px;
-}
-.feature {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.featureIcon {
-  width: 50px;
-  height: 50px;
-}
-
-.featureTitle {
-  font-size: 20px;
-  font-weight: 600;
-  margin: 20px;
-}
-
-.featureDesc {
-  color: gray;
-  width: 50%;
-  height: 100px;
-}
-.product {
-  height: 100vh;
-  background-color: rgb(133, 216, 147);
-  position: relative;
-  clip-path: polygon(0 4%, 100% 0%, 100% 100%, 0 95%);
-}
-.payment{
-  width: 500px;
-  height:500px;
-  background-color:rgb(209, 203, 194);
-  position: absolute;
-  top:0;
-  bottom:0;
-  left:-600px;;
-  right:0;
-  margin: auto;
-  padding: 10px 50px;
-  display: none;
-  flex-direction: column;
-  box-shadow: 9px 10px 14px -8px rgba(0,0,0,0.76);
--webkit-box-shadow: 9px 10px 14px -8px rgba(0,0,0,0.76);
--moz-box-shadow: 9px 10px 14px -8px rgba(0,0,0,0.76);
-}
-.payTitle{
-  font: size 20px;
-  color: rgb(102, 110, 110);
-}
-.label{
-  font-size: 14px;
-  font-weight: 300;
-}
-.productDetails{
-  position: absolute;
-  top:10%;
-  right: 0;
-  width: 40%;
-  padding: 50px;
-}
-.productTitle{
-  font-size: 75px;
-  font-weight: 900;
-}
-.productButton{
-  font-size: large;
-  color: rgb(255, 255, 255);
-  background-color: black;
-  border-radius: 10mm;
-  border:none;
-}
-.productButton:hover{
-  color: black;
-  background-color: rgb(245, 245, 245);
-}
-.productDesc{
-  font-style:27px;
-  color: rgb(255, 255, 255);
-
-}
-.colors,.sizes{
-  display: flex;
-}
-.color{
-  width: 32px;
-  height: 32px;
-  border-radius: 5px;
-  background-color: black;
-  margin-right: 10px;
-  cursor: pointer;
-}
-.color:last-child{
-  background-color: blue;
-}
-.size{
-  padding: 10px 20px;
-  border:solid black;
-  margin-right: 10px;
-  cursor: pointer;
-  font-size: large;
-}
-.productButton{
-  padding: 50px,20px;
-}
-.card.Info{
-  display: flex;
-  justify-content: space-between;
-}
-.cardIcon{
-  margin-right: 10px;
-}
-.sm{
- width: 30%;
-}
-.payButton{
-  position:absolute;
-  height: 40px;
-  bottom: -1px;
-  width: 100%;
-  left: 0;
-  box-shadow: 9px 10px 14px -8px rgba(0,0,0,0.76);
-  -webkit-box-shadow: 9px 10px 14px -8px rgba(0,0,0,0.76);
-  -moz-box-shadow: 9px 10px 14px -8px rgba(0,0,0,0.76);
-  background-attachment: fixed;
-  background-color: #369e62;
-  color: white;
-  border: none;
-  cursor: pointer;
-
-}
-.close{
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  background-color: rgb(245, 7, 7);
-  color:white;
-  top: 10px;
-  right:10px;
-  display:flex;
-  align-items:center;
-  justify-content: center;
-  cursor: pointer;
-  padding:2px ;
-}
-footer{
-  display: flex;
-}
-.footerLeft{
- flex: 2;
- display: flex;
- justify-content: space-between;
- padding: 20px}
- .fMenuTitle{
-font-size:15px;
- }
-.footerRight{
-  flex: 1;
-  padding: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.fInput{
-  padding: 5px;
-}
-.fButton{
-  padding:5px ;
-  background-color:black ;
-  color:white ;
-  border: none;
-}
-.fIcons{
-  display: flex;
-}
-.fIcons{
-  width: 20px;
-  height:20px;
-  margin-right: 10px;
-  justify-content:space-between;
-}
-.copyright{
-  font-weight:200;
-}
-.footer{
-  background-color: #369e62;
-}
-.ftt{
-  background-color: #369e62;
-  clip-path: polygon(98% 10%, 1% 3%, 2% 99%, 100% 99%);
-}
+  <!-- Embedded CSS from your style.css -->
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    body {
+      font-family: 'Lato', sans-serif;
+      padding: 0;
+      margin: 0;
+    }
+    nav {
+      background-color: black;
+      color: white;
+      padding: 10px 40px;
+    }
+    .navTop {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .search {
+      display: flex;
+      align-items: center;
+      background-color: grey;
+      padding: 10px 20px;
+      border-radius: 10px;
+    }
+    .searchInput {
+      border: none;
+      background-color: transparent;
+    }
+    .searchInput::placeholder {
+      color: lightgrey;
+    }
+    .Limittedoffer {
+      font-size: 20px;
+      border-bottom: 2px solid green;
+      cursor: pointer;
+    }
+    .navBottom {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .menuitem {
+      margin-right: 40px;
+      cursor: pointer;
+      color: lightgrey;
+      font-weight: 400;
+    }
+    .slider {
+      background: url("./img/🥑.jpeg");
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+      overflow: hidden;
+    }
+    .slideWrapper {
+      display: flex;
+      width: 500vw;
+      transition: all 1s ease-in-out;
+    }
+    .sliderItem {
+      width: 200vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+    }
+    .sliderBg {
+      width: 750px;
+      height: 750px;
+      border-radius: 50%;
+      position: absolute;
+      background-color: rgb(90, 121, 5);
+      left: auto;
+    }
+    .sliderimg {
+      z-index: 1;
+    }
+    .sliderTitle {
+      position: relative;
+      top: 40px;
+      right: 30px;
+      font-size: 40px;
+      font-weight: 900;
+      color: rgb(255, 253, 253);
+      z-index: 1;
+    }
+    .sliderPrice {
+      position: absolute;
+      top: 10px;
+      left: 90px;
+      font-size: 5vw;
+      font-weight: 300;
+      background-color: rgb(49, 47, 45);
+      text-align: center;
+      color: black;
+      border: 1px solid rgba(152, 165, 104, 0.384);
+      border-radius: 1cm;
+    }
+    .buybutton {
+      position: absolute;
+      bottom: 80px;
+      left: 69%;
+      font-size: 1.5vw;
+      font-weight: 300;
+      text-align: center;
+      color: rgb(182, 182, 190);
+      border: 1px solid grey;
+      background-color: black;
+    }
+    .buybutton:hover {
+      background-color: rgb(255, 255, 255);
+      color: rgb(17, 7, 7);
+    }
+    .sliderItem:nth-child(1) .sliderBg {
+      background-color: #369e62;
+    }
+    .sliderItem:nth-child(2) .sliderBg {
+      background-color: rebeccapurple;
+    }
+    .sliderItem:nth-child(3) .sliderBg {
+      background-color: teal;
+    }
+    .sliderItem:nth-child(4) .sliderBg {
+      background-color: cornflowerblue;
+    }
+    .sliderItem:nth-child(5) .sliderBg {
+      background-color: rgb(124, 115, 80);
+    }
+    .sliderItem:nth-child(1) .sliderPrice {
+      color: #97ddb4;
+    }
+    .features {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 30px;
+    }
+    .feature {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+    .featureIcon {
+      width: 50px;
+      height: 50px;
+    }
+    .featureTitle {
+      font-size: 20px;
+      font-weight: 600;
+      margin: 20px;
+    }
+    .featureDesc {
+      color: gray;
+      width: 50%;
+      height: 100px;
+    }
+    .product {
+      height: 100vh;
+      background-color: rgb(133, 216, 147);
+      position: relative;
+      clip-path: polygon(0 4%, 100% 0%, 100% 100%, 0 95%);
+    }
+    .payment {
+      width: 500px;
+      height: 500px;
+      background-color: rgb(209, 203, 194);
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -600px;
+      right: 0;
+      margin: auto;
+      padding: 10px 50px;
+      display: none;
+      flex-direction: column;
+      box-shadow: 9px 10px 14px -8px rgba(0, 0, 0, 0.76);
+    }
+    .payTitle {
+      font-size: 20px;
+      color: rgb(102, 110, 110);
+    }
+    .label {
+      font-size: 14px;
+      font-weight: 300;
+    }
+    .productDetails {
+      position: absolute;
+      top: 10%;
+      right: 0;
+      width: 40%;
+      padding: 50px;
+    }
+    .productTitle {
+      font-size: 75px;
+      font-weight: 900;
+    }
+    .productDesc {
+      font-size: 27px;
+      color: white;
+    }
+    .colors,
+    .sizes {
+      display: flex;
+    }
+    .color {
+      width: 32px;
+      height: 32px;
+      border-radius: 5px;
+      background-color: black;
+      margin-right: 10px;
+      cursor: pointer;
+    }
+    .color:last-child {
+      background-color: blue;
+    }
+    .size {
+      padding: 10px 20px;
+      border: solid black;
+      margin-right: 10px;
+      cursor: pointer;
+      font-size: large;
+    }
+    .productButton {
+      font-size: large;
+      color: white;
+      background-color: black;
+      border-radius: 10mm;
+      border: none;
+    }
+    .productButton:hover {
+      color: black;
+      background-color: rgb(245, 245, 245);
+    }
+    .card.Info {
+      display: flex;
+      justify-content: space-between;
+    }
+    .cardIcon {
+      margin-right: 10px;
+    }
+    .sm {
+      width: 30%;
+    }
+    .payButton {
+      position: absolute;
+      height: 40px;
+      bottom: -1px;
+      width: 100%;
+      left: 0;
+      background-color: #369e62;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    .close {
+      width: 20px;
+      height: 20px;
+      position: absolute;
+      background-color: rgb(245, 7, 7);
+      color: white;
+      top: 10px;
+      right: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      padding: 2px;
+    }
+    footer {
+      display: flex;
+    }
+    .footerLeft {
+      flex: 2;
+      display: flex;
+      justify-content: space-between;
+      padding: 20px;
+    }
+    .fMenuTitle {
+      font-size: 15px;
+    }
+    .footerRight {
+      flex: 1;
+      padding: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    .fInput {
+      padding: 5px;
+    }
+    .fButton {
+      padding: 5px;
+      background-color: black;
+      color: white;
+      border: none;
+    }
+    .fIcons {
+      display: flex;
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+      justify-content: space-between;
+    }
+    .copyright {
+      font-weight: 200;
+    }
+    .footer {
+      background-color: #369e62;
+    }
+    .ftt {
+      background-color: #369e62;
+      clip-path: polygon(98% 10%, 1% 3%, 2% 99%, 100% 99%);
+    }
+  </style>
+</head>
+<body>
+  <!-- your body content goes here (already provided earlier) -->
+  <script src="./app.js"></script>
+</body>
+</html>
